tests/baselines/reference/esDecorators-contextualTypes.2.errors.txt
esDecorators-contextualTypes.2.ts(26,77): error TS2339: Property 'toString' does not exist on type 'string | symbol'.
  Property 'toString' does not exist on type 'string'.


==== esDecorators-contextualTypes.2.ts (1 errors) ====
    class C {
        @boundMethodLogger("Yadda", /*bound*/ true)
        foo() {
            this.fooHelper();
        }
    
        fooHelper() {
            console.log("Behold! The actual method implementation!")
        }
    };
    export { C };
    
    function boundMethodLogger<This, Args extends any[], Return>(source: string, bound = true) {
        return function loggedDecorator(
            target: (this: This, ...args: Args) => Return,
            context: ClassMethodDecoratorContext<This, (this: This, ...args: Args) => Return>
        ): ((this: This, ...args: Args) => Return) {
    
            if (bound) {
                context.addInitializer(function () {
                    (this as any)[context.name] = (this as any)[context.name].bind(this);
                });
            }
    
            return function (this, ...args) {
                console.log(`<${source}>: I'm logging stuff from ${context.name.toString()}!`);
                                                                                ~~~~~~~~
!!! error TS2339: Property 'toString' does not exist on type 'string | symbol'.
!!! error TS2339:   Property 'toString' does not exist on type 'string'.
                return target.apply(this, args);
            }
        }
    }